--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,12 @@
     "main": "app.js",
     "scripts": {},
     "dependencies": {
-      "bcrypt": "^5.1.0",
-      "connect-pg-simple": "^8.0.0",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "express-session": "^1.17.3",
-      "pg": "^8.10.0"
+        "axios": "^1.4.0",
+        "bcrypt": "^5.1.0",
+        "connect-pg-simple": "^8.0.0",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "pg": "^8.10.0"
     }
-  }
-  
+}
