--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,11 @@
         "axios": "^1.4.0",
         "bcrypt": "^5.1.0",
         "connect-pg-simple": "^8.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
-        "pg": "^8.10.0"
+        "pg": "^8.10.0",
+        "stripe": "^12.8.0"
     }
 }
